# youtu-tip

./: CNAME  README.md  README_CN.md  index.html
youtu-llm/: README.md  README_CN.md
youtu-tip/: .gitignore  .tool-versions  README.md  README_CN.md  license  package-lock.json  (+3 more)
youtu-tip/python/: pyproject.toml  run_sidecar.py
youtu-tip/python/app/: __init__.py  main.py  version.py
youtu-tip/python/app/api/: __init__.py  routes_chat.py  routes_debug.py  routes_gui_agent.py  routes_health.py  routes_intent.py  routes_llm.py  routes_selection.py  routes_settings.py  routes_skills.py  routes_youtu_agent.py
youtu-tip/python/app/core/: __init__.py  config.py  deps.py  logging.py  settings.py
youtu-tip/python/app/gui_agent/: __init__.py  demo_flow.py  local_env.py  qwen_agent.py  qwen_prompting.py  qwen_response_parser.py  qwen_skills.py  qwen_vl_utils.py  run_loop.py  runner.py
youtu-tip/python/app/gui_agent/prompts/: __init__.py  action_description.txt  description_prompt.txt  observation_prompt.txt  system_prompt.txt  system_prompt_v2.txt  tool_description_prompt.txt
youtu-tip/python/app/gui_agent/skills/: __init__.py  chrome-search.md  chrome.md  open-terminal-in-vscode.md  repository.py
youtu-tip/python/app/schemas/: __init__.py  chat.py  common.py  debug.py  gui_agent.py  intent.py  llm.py  selection.py  settings.py  skills.py  youtu_agent.py
youtu-tip/python/app/services/: __init__.py  chat_session.py  cos_uploader.py  debug_report.py  gui_agent.py  intent_builder.py  llm.py  settings_manager.py  text_selection.py  tip_cloud_auth.py  youtu_adapter.py  youtu_agent_service.py
(+108 files in other folders)
