[tool.poetry]
name = "tip-sidecar"
version = "0.6.1"
description = "FastAPI sidecar service for Tip desktop assistant"
authors = ["Tencent Youtu Team | Contact: xfey99@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
backoff = "^2.2.1"
cos-python-sdk-v5 = "^1.9.39"
dashscope = "^1.25.2"
fastapi = "^0.115.2"
google-api-core = "^2.28.1"
google-auth = "^2.43.0"
httpx = "^0.27.2"
numpy = "^2.0.2"
openai = "^2.0.0"
opencv-python = "^4.10.0"
pillow = "^11.0.0"
pyautogui = "^0.9.54"
pyobjc-framework-ApplicationServices = "^10.3.2"
pyobjc-framework-Cocoa = "^10.3.2"
pyobjc-framework-CoreText = "^10.3.2"
pyobjc-framework-Quartz = "^10.3.2"
pyperclip = "^1.11.0"
pynput = "^1.7.7"
python-magic = ">=0.4.27"
python-multipart = "^0.0.9"
requests = "^2.32.3"
structlog = "^24.4.0"
unstructured = {extras = ["docx", "pptx"], version = ">=0.18.14"}
# Explicit docx parsers to ensure packaging includes the needed backends
python-docx = ">=1.1.2"
docx2txt = "^0.9"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
youtu-agent = {path = "../youtu-agent"}
pexpect = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
respx = "^0.21.1"
anyio = "^4.6.2"
ruff = "^0.8.3"
black = "^24.10.0"
pyinstaller = "^6.11.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
